--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         .gallery-item:hover {
             transform: scale(1.05);
         }
+
+        /* Change color of hamburger icon for better visibility */
+        #menu-toggle i {
+            color: #333; /* Dark color for visibility */
+        }
     </style>
 </head>
 <body class="bg-gray-200 text-gray-800 font-sans">
