--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         #menu-toggle i {
             color: #333; /* Dark color for visibility */
         }
+
+        /* Ensure images scale properly for mobile */
+        .gallery-item img {
+            width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body class="bg-gray-200 text-gray-800 font-sans">
