--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
 <header class="bg-green-600 text-white">
     <div class="container mx-auto px-4 py-6 flex justify-between items-center">
         <h1 class="text-2xl font-bold">Polymam Clinic</h1>
-        <nav>
+        
+        <!-- Hamburger Menu for Mobile -->
+        <div class="block lg:hidden">
+            <button id="hamburger-btn" class="text-white focus:outline-none">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                </svg>
+            </button>
+        </div>
+
+        <!-- Navigation Menu -->
+        <nav class="hidden lg:block">
             <ul class="flex space-x-6">
                 <li><a href="#about" class="hover:text-yellow-300">About</a></li>
                 <li><a href="#contact" class="hover:text-yellow-300">Contact</a></li>
@@ -43,6 +54,18 @@
                 <li><a href="#contact" class="hover:text-yellow-300">News</a></li>
                 <li><a href="#contact" class="hover:text-yellow-300">Education</a></li>
                 <li><a href="#portal" class="hover:text-yellow-300 font-semibold">Patient Portal</a></li>
+            </ul>
+        </nav>
+
+        <!-- Mobile Menu (hidden by default) -->
+        <nav id="mobile-menu" class="lg:hidden hidden absolute top-16 left-0 right-0 bg-green-600 text-white py-4 px-6">
+            <ul class="space-y-4">
+                <li><a href="#about" class="block hover:text-yellow-300">About</a></li>
+                <li><a href="#contact" class="block hover:text-yellow-300">Contact</a></li>
+                <li><a href="#services" class="block hover:text-yellow-300">Clinic Services</a></li>
+                <li><a href="#contact" class="block hover:text-yellow-300">News</a></li>
+                <li><a href="#contact" class="block hover:text-yellow-300">Education</a></li>
+                <li><a href="#portal" class="block hover:text-yellow-300 font-semibold">Patient Portal</a></li>
             </ul>
         </nav>
     </div>
@@ -162,6 +185,16 @@
 
 <!-- Add FontAwesome for icons -->
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
+<script>
+    // Toggle mobile menu visibility
+    const hamburgerBtn = document.getElementById('hamburger-btn');
+    const mobileMenu = document.getElementById('mobile-menu');
+
+    hamburgerBtn.addEventListener('click', () => {
+        mobileMenu.classList.toggle('hidden');
+    });
+</script>
 
 </body>
 </html>
