--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <header class="bg-green-600 text-white">
     <div class="container mx-auto px-4 py-6 flex justify-between items-center">
         <h1 class="text-2xl font-bold">Polymam Clinic</h1>
-        <nav class="hidden md:block">
+        <nav class="hidden md:flex">
             <ul class="flex space-x-6">
                 <li><a href="#about" class="hover:text-yellow-300">About</a></li>
                 <li><a href="#contact" class="hover:text-yellow-300">Contact</a></li>
