--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- Header -->
 <header class="bg-green-600 text-white">
     <div class="container mx-auto px-4 py-6 flex justify-between items-center">
-        <h1 class="text-2xl font-bold">Polymam Clinic</h1>
+        <h1 class="text-2xl font-bold">Polyfam Clinic</h1>
         
         <!-- Hamburger Menu for Mobile -->
         <div class="block lg:hidden">
