--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <div class="container mx-auto px-4 text-center">
     <h3 class="text-3xl font-bold text-green-600 mb-6">About Polymam Clinic</h3>
     <p class="max-w-3xl mx-auto text-lg">
-      Polymam Clinic is a community-driven healthcare center committed to offering accessible, affordable, and high-quality medical services. Our team of specialists works around the clock to ensure your family’s well-being.
+      Polyfam Clinic is a community-driven healthcare center committed to offering accessible, affordable, and high-quality medical services. Our team of specialists works around the clock to ensure your family’s well-being.
     </p>
   </div>
 </section>
